# art

./: .gitignore  Readme.md  digitize_pdfs_december2025.sh  process_pdf.py  pyproject.toml
art_archive/db/: archive.db
art_archive/metadata/: metadata.csv
art_archive/scripts/: build.py  tag.py
art_archive/web/: app.py
art_archive/web/static/: style.css
art_archive/web/templates/: artwork.html  base.html  gallery.html
