[tool.poetry]
name = "art"
version = "0.1.0"
description = ""
authors = ["defne"]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = {url = "https://github.com/pymupdf/PyMuPDF/archive/refs/tags/1.26.7.tar.gz"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
